--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -31,6 +31,7 @@ $color-18: #bababa;
 $color-19: #ebebeb;
 $color-20: #5ea235;
 $color-21: #cdcdcd;
+$color-22: #666666;
 
 /* background-color */
 $background-color-1: #000000;
@@ -54,6 +55,7 @@ $background-color-18: #bababa;
 $background-color-19: #ebebeb;
 $background-color-20: #5ea235;
 $background-color-21: #cdcdcd;
+$background-color-22: #666666;
 
 /* button-fonts */
 $font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
