Добавил состояние кнопке в cat-result

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -32,6 +32,7 @@ $color-19: #ebebeb;
 $color-20: #5ea235;
 $color-21: #cdcdcd;
 $color-22: #666666;
+$color-23: #5eaa2f;
 
 /* background-color */
 $background-color-1: #000000;
@@ -56,6 +57,7 @@ $background-color-19: #ebebeb;
 $background-color-20: #5ea235;
 $background-color-21: #cdcdcd;
 $background-color-22: #666666;
+$background-color-23: #5eaa2f;
 
 /* button-fonts */
 $font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
