--- a/source/sass/blocks/cat-result.scss
+++ b/source/sass/blocks/cat-result.scss
@@ -9,6 +9,8 @@
   @media (min-width: $tablet-width) {
     width: 560px;
     height: 512px;
+
+    background-color: $background-color-2;
   }
 }
 
@@ -40,7 +42,7 @@
 }
 
 .cat-result__item--before {
-  z-index: 5;
+  z-index: 4;
 
   width: 50%;
 
@@ -73,12 +75,7 @@
 }
 
 .cat-result__control {
-  border: 2px solid $background-color-22;
-
-  width: 40px;
-  height: 40px;
-
-  border-radius: 50%;
+  @include button-reset;
 
   position: absolute;
   left: 50%;
@@ -90,6 +87,31 @@
   transform: translate(-50%, -50%);
 
   transition: left 2s;
+}
+
+.cat-result__control-icon {
+  position: relative;
+  z-index: 10;
+}
+
+.cat-result__control-icon:hover {
+  rect:nth-child(2) {
+    stroke: $background-color-3;
+  }
+
+  path {
+    fill: $background-color-3;
+  }
+}
+
+.cat-result__control-icon:active {
+  rect:nth-child(2) {
+    stroke: rgba($background-color-23, 0.6);
+  }
+
+  path {
+    fill: rgba($background-color-23, 0.6);
+  }
 }
 
 .cat-result__control::before {
@@ -104,13 +126,22 @@
 
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: calc(50% + -1px);
+  z-index: 9;
 
   transform: translate(-50%, -50%);
 
   @media (min-width: $tablet-width) {
     height: 512px;
   }
+}
+
+.cat-result__control:hover::before {
+  background-color: $background-color-3;
+}
+
+.cat-result__control:active::before {
+  background-color: rgba($background-color-23, 0.6);
 }
 
 .cat-result__list--after + .cat-result__control {
