--- a/source/sass/blocks/living-example.scss
+++ b/source/sass/blocks/living-example.scss
@@ -4,7 +4,7 @@
   background-color: $background-color-12;
 
   @media (min-width: $tablet-width) {
-    padding: 45px 30px 99px;
+    padding: 45px 0 0;
     border-top: 1px solid $background-color-9;
 
     background-color: $background-color-2;
@@ -50,7 +50,7 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 0 60px;
-    padding: 0;
+    padding: 0 0 0 30px;
 
     font: $font-title-large-tablet;
   }
@@ -73,7 +73,7 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 0 55px;
-    padding: 0;
+    padding: 0 30px 0;
 
     font: $font-text-medium-tablet;
 
@@ -91,10 +91,11 @@
 
 .living-example__description-container {
   @media (min-width: $tablet-width) {
+    margin: 0 0 44px;
+    padding: 0 30px 0;
+
     display: flex;
     justify-content: space-between;
-
-    margin: 0 0 44px;
   }
 
   @media (min-width: $desktop-width) {
@@ -263,5 +264,28 @@
     font: $font-title-living-example-result-tablet;
 
     max-width: 200px;
+  }
+}
+
+.living-example__cat-result {
+  @media (min-width: $tablet-width) {
+    padding: 0 0 101px;
+
+    position: relative;
+
+    background-color: $background-color-7;
+
+    &::before {
+      content: "";
+
+      width: 100%;
+      height: 100px;
+
+      background-color: $background-color-2;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 }
