--- a/source/sass/blocks/cat-result.scss
+++ b/source/sass/blocks/cat-result.scss
@@ -71,6 +71,18 @@
   @media (min-width: $tablet-width) {
     width: 560px;
     height: 512px;
+
+    &::before {
+      content: "";
+      display: block;
+
+      width: 100%;
+      height: 100px;
+
+      background-color: $background-color-2;
+
+      // position: absolute;
+    }
   }
 }
 
@@ -133,6 +145,8 @@
 
   @media (min-width: $tablet-width) {
     height: 512px;
+
+    top: 50%;
   }
 }
 
