--- a/source/sass/blocks/catalog-page.scss
+++ b/source/sass/blocks/catalog-page.scss
@@ -6,4 +6,11 @@
     margin: 0 0 166px;
     padding: 0 30px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto 166px;
+    padding: 46px 0 0;
+
+    width: 1220px;
+  }
 }
