--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -20,6 +20,10 @@
     @media (min-width: $tablet-width) {
       top: 22px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 31px;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -69,6 +73,14 @@
     width: 418px;
 
     font: $font-title-additional-products-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 80px -650px;
+    padding: 8px 0 0 40px;
+
+    position: relative;
+    left: 50%;
   }
 }
 
