--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -31,7 +31,7 @@
   }
 }
 
-.additional-product__item .additional-product-card {
+.additional-products__item .additional-product-card {
   border-top: 1px solid $background-color-13;
 
   @media (min-width: $tablet-width) {
@@ -40,7 +40,7 @@
   }
 }
 
-.additional-product__item {
+.additional-products__item {
   &:last-child {
     .additional-product-card {
       border-bottom: 1px solid $background-color-13;
@@ -49,6 +49,16 @@
         border-bottom: none;
       }
     }
+  }
+}
+
+.additional-products__wrapper {
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
+
+    display: flex;
+
+    width: 1220px;
   }
 }
 
@@ -84,7 +94,7 @@
   }
 }
 
-.additional-product__list {
+.additional-products__list {
   @include list-reset;
   margin: 0 0 34px;
 
@@ -93,6 +103,15 @@
     border: 1px solid $background-color-21;
 
     width: calc(100% - 60px);
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 81px 0 0;
+    border: none;
+    border-top: 1px solid $background-color-21;
+    border-bottom: 1px solid $background-color-21;
+
+    width: 896px;
   }
 }
 
