--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -24,7 +24,7 @@
 
   @media (min-width: $desktop-width) {
     margin: 0;
-    padding: 0;
+    padding: 57px 38px 41px;
 
     display: block;
 
@@ -44,6 +44,11 @@
   @media (min-width: $tablet-width) {
     margin: 0 266px 0 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto 46px;
+    padding: 0;
+  }
 }
 
 .gift__text {
@@ -61,5 +66,12 @@
     padding: 14px 0 0;
 
     text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+    padding: 0;
+
+    text-align: center;
   }
 }
