--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -194,10 +194,13 @@
 .program-type__text {
   @include margin-reset;
   margin-bottom: 43px;
+
   font: $font-text-medium-mobile;
   color: $color-5;
 
   position: relative;
+
+  min-height: 90px;
 
   &::after {
     content: "";
@@ -221,6 +224,8 @@
 
     font: $font-text-medium-tablet;
     color: $color-1;
+
+    min-height: auto;
   }
 
   @media (min-width: $desktop-width) {
