--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -1,9 +1,9 @@
 .gift {
-  padding: 58px 0 43px;
+  padding: 58px 65px 43px;
 
   position: relative;
 
-  width: 280px;
+  width: calc(100% - 40px);
   min-height: 290px;
 
   background: url("../img/bg-gift-mobile.jpg") no-repeat center;
@@ -11,14 +11,15 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 auto;
-    padding: 57px 78px 50px;
+    padding: 57px 116px 50px 78px;
 
     display: flex;
+    justify-content: space-between;
 
     background: url("../img/bg-gift-tablet.jpg") no-repeat center;
     background-size: cover;
 
-    width: 707px;
+    width: calc(100% - 60px);
     min-height: 200px;
   }
 
