--- a/source/sass/blocks/living-example.scss
+++ b/source/sass/blocks/living-example.scss
@@ -263,7 +263,7 @@
 
 .living-example__cat-result {
   @media (min-width: $tablet-width) {
-    padding: 0 0 101px;
+    padding: 0 0 102px;
 
     position: relative;
 
@@ -273,13 +273,23 @@
       content: "";
 
       width: 100%;
-      height: 100px;
+      height: 152px;
 
       background-color: $background-color-2;
 
       position: absolute;
       top: 0;
       left: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 0 0;
+
+    position: static;
+
+    &::before {
+      display: none;
     }
   }
 }
