--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -63,6 +63,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 24px 123px;
+
+    width: 565px;
   }
 
   @media (min-width: $desktop-width) {
