--- a/source/sass/blocks/cat-result.scss
+++ b/source/sass/blocks/cat-result.scss
@@ -13,15 +13,15 @@
     background-color: $background-color-2;
   }
 
-  @media (min-width: $desktop-width) {
-    margin-left: -97px;
+  // @media (min-width: $desktop-width) {
+  //   margin-left: -97px;
 
-    position: relative;
-    top: -134px;
-    right: 50%;
+  //   position: relative;
+  //   top: -134px;
+  //   right: 50%;
 
-    background-color: transparent;
-  }
+  //   background-color: transparent;
+  // }
 }
 
 .cat-result__list {
@@ -59,7 +59,7 @@
       height: 152px;
 
       position: absolute;
-      top: 0;
+      top: -17px;
       left: 0;
 
       background-color: $background-color-2;
@@ -69,9 +69,9 @@
   @media (min-width: $desktop-width) {
     background-color: $background-color-4;
 
-    &::before {
-      height: 134px;
-    }
+    // &::before {
+    //   height: 134px;
+    // }
   }
 }
 
