Стилизовал cat-result под десктоп, контент Living-example центрируется по центру

--- a/source/sass/blocks/cat-result.scss
+++ b/source/sass/blocks/cat-result.scss
@@ -59,7 +59,7 @@
       height: 152px;
 
       position: absolute;
-      top: -17px;
+      top: 0;
       left: 0;
 
       background-color: $background-color-2;
@@ -69,9 +69,9 @@
   @media (min-width: $desktop-width) {
     background-color: $background-color-4;
 
-    // &::before {
-    //   height: 134px;
-    // }
+    &::before {
+      top: -17px;
+    }
   }
 }
 
