--- a/source/sass/blocks/living-example.scss
+++ b/source/sass/blocks/living-example.scss
@@ -301,16 +301,9 @@
 
   @media (min-width: $desktop-width) {
     padding: 0 0 0;
+    margin: 0 -610px 0 0;
 
     top: -135px;
-    // position: static;
-
-    // height: 378px;
-
-    // background-color: transparent;
-
-    // &::before {
-    //   display: none;
-    // }
+    right: 50%;
   }
 }
