--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -24,15 +24,25 @@
 }
 
 .social__link {
-  &:hover {
+  display: block;
+
+  &:hover .social__link-icon {
     path {
       fill: $background-color-3;
     }
   }
-
-  &:active {
-    path {
-      opacity: 0.3;
-    }
-  }
 }
+
+// .social__link {
+//   &:hover {
+//     path {
+//       fill: $background-color-3;
+//     }
+//   }
+
+//   &:active {
+//     path {
+//       opacity: 0.3;
+//     }
+//   }
+// }
