--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -93,4 +93,14 @@
   position: absolute;
   top: 15px;
   right: 34px;
+
+  @media (min-width: $tablet-width) {
+    top: 18px;
+    right: 85px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 19px;
+    right: 16px;
+  }
 }
