--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -46,7 +46,7 @@
 
 .text-input__input {
   margin: 0;
-  padding: 0 14px;
+  padding: 0 40px 0 14px;
   border: 1px solid $background-color-16;
 
   width: 100%;
@@ -79,7 +79,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 0 19px;
+    padding: 0 45px 0 19px;
 
     height: 52px;
 
