Поправил код по stylelint

--- a/source/sass/blocks/nutrition.scss
+++ b/source/sass/blocks/nutrition.scss
@@ -83,7 +83,7 @@
 .nutrition__block {
   @media (min-width: $desktop-width) {
     margin: 0 auto;
-    padding: 82px 0px 266px 80px;
+    padding: 82px 0 266px 80px;
 
     width: 1220px;
   }
