--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -54,8 +54,7 @@
     height: 2px;
 
     background-color: $background-color-1;
-    box-shadow: 0px 8px 0 0 $background-color-1,
-      0px 16px 0 0 $background-color-1;
+    box-shadow: 0 8px 0 0 $background-color-1, 0 16px 0 0 $background-color-1;
   }
 }
 
