--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,7 @@
 @import "./blocks/form-page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
-@import "./blocks/main-container.scss";
+// @import "./blocks/main-container.scss";
 @import "./blocks/nutrition.scss";
 @import "./blocks/program-type.scss";
 @import "./blocks/work-principle.scss";
