--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -80,6 +80,12 @@
     opacity: 0.6;
   }
 
+  &:focus-visible {
+    outline: none;
+
+    opacity: 0.8;
+  }
+
   @media (min-width: $tablet-width) {
     margin: 0 40px 0 0;
   }
