--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,9 +1,10 @@
 .social {
   @include list-reset;
-  margin: 0 auto 40px;
+  margin: 0 auto 35px;
+  padding: 4px 0 0;
 
   display: flex;
-  justify-content: space-between;
+  column-gap: 26px;
 
   width: 48%;
 
