--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -71,11 +71,19 @@
     border: 1px solid transparent;
   }
 
+  &:focus + .text-input__icon {
+    color: #68b738;
+  }
+
   &:invalid {
     outline: 2px solid $background-color-17;
     outline-offset: -2px;
-
+    color: #ff8282;
     border: 1px solid transparent;
+  }
+
+  &:invalid + .text-input__icon {
+    color: #ff8282;
   }
 
   @media (min-width: $tablet-width) {
