--- a/source/sass/blocks/living-example.scss
+++ b/source/sass/blocks/living-example.scss
@@ -38,11 +38,12 @@
   @media (min-width: $desktop-width) {
     margin: 0 0 0 -610px;
     padding-top: 70px;
-    padding-bottom: 70px;
 
     position: relative;
     z-index: 3;
     left: 50%;
+
+    align-self: start;
   }
 }
 
@@ -238,7 +239,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0;
+    margin: 0;
+    padding: 0 0 120px;
 
     display: flex;
 
