--- a/source/sass/components/checkbox-input.scss
+++ b/source/sass/components/checkbox-input.scss
@@ -102,6 +102,10 @@
   opacity: 0.3;
 }
 
+.checkbox-input__input:focus-visible + .checkbox-input__label::before {
+  border-color: $background-color-18;
+}
+
 .checkbox-input__input:checked + .checkbox-input__label::after {
   display: block;
 }
