--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -255,6 +255,7 @@
 
 .program-type__link {
   @include link-reset;
+
   font: $font-button-program-type-mobile;
   text-transform: uppercase;
 
@@ -303,5 +304,15 @@
 }
 
 .program-type__link:hover::after {
+  width: 32px;
+}
+
+.program-type__link:focus-visible {
+  outline: none;
+
+  opacity: 0.6;
+}
+
+.program-type__link:focus-visible::after {
   width: 32px;
 }
